statum-macros/tests/ui/invalid_validators_unknown_state_method.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` defines methods that do not match any variant in `TaskState`: is_archived.
       Valid validator methods for `TaskMachine` are: is_draft, is_done.
  --> tests/ui/invalid_validators_unknown_state_method.rs:27:1
   |
27 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_unknown_state_method.rs:46:2
   |
46 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_unknown_state_method.rs`
